PLFM-9398 - add tests/remove dead code