@@ -1081,7 +1081,7 @@ public class GridIndexDaoImplTest {
 	}
 	
 	@Test
-	public void testInsertIntoRepeatedGrowableArrayBatchWithEmptyArray() {
+	public void testBatchInsertRgaNodes() {
 		LogicalTimestamp arrOneId = new LogicalTimestamp().setReplicaId(4L).setSequenceNumber(44L);
 		createArray(sessionIdOne, replicaIdOne, arrOneId);
 
@@ -1094,39 +1094,14 @@ public class GridIndexDaoImplTest {
 						.setReferenceNodeId(ids.get(2)).setIsDeleted(false));
 
 		// call under test
-		gridIndexDao.insertIntoRepeatedGrowableArrayBatch(sessionIdOne, replicaIdOne, batch);
+		gridIndexDao.batchInsertRgaNodes(sessionIdOne, replicaIdOne, batch);
 
 		ArrayNode result = gridIndexDao.getArrayNode(sessionIdOne, replicaIdOne, arrOneId, false, limit, offset);
 		assertEquals(new ArrayNode().setId(arrOneId).setElements(batch), result);
 	}
 
 	@Test
-	public void testInsertIntoRepeatedGrowableArrayBatchWithExistingArray() {
-		LogicalTimestamp arrOneId = new LogicalTimestamp().setReplicaId(4L).setSequenceNumber(44L);
-		createArray(sessionIdOne, replicaIdOne, arrOneId);
-
-		// Insert first node individually
-		RGANode firstNode = new RGANode().setContainerId(arrOneId).setNodeId(ids.get(0)).setDataId(ids.get(1))
-				.setReferenceNodeId(arrOneId).setIsDeleted(false);
-		gridIndexDao.insertIntoRepeatedGrowableArray(sessionIdOne, replicaIdOne, firstNode);
-
-		// Now batch insert additional nodes (should use slow path)
-		List<RGANode> batch = List.of(
-				new RGANode().setContainerId(arrOneId).setNodeId(ids.get(2)).setDataId(ids.get(3))
-						.setReferenceNodeId(ids.get(0)).setIsDeleted(false),
-				new RGANode().setContainerId(arrOneId).setNodeId(ids.get(4)).setDataId(ids.get(5))
-						.setReferenceNodeId(ids.get(2)).setIsDeleted(false));
-
-		// call under test
-		gridIndexDao.insertIntoRepeatedGrowableArrayBatch(sessionIdOne, replicaIdOne, batch);
-
-		ArrayNode result = gridIndexDao.getArrayNode(sessionIdOne, replicaIdOne, arrOneId, false, limit, offset);
-		List<RGANode> expected = List.of(firstNode, batch.get(0), batch.get(1));
-		assertEquals(new ArrayNode().setId(arrOneId).setElements(expected), result);
-	}
-
-	@Test
-	public void testInsertIntoRepeatedGrowableArrayBatchMultipleArrays() {
+	public void testBatchInsertRgaNodesMultipleArrays() {
 		LogicalTimestamp arrOneId = new LogicalTimestamp().setReplicaId(4L).setSequenceNumber(44L);
 		LogicalTimestamp arrTwoId = new LogicalTimestamp().setReplicaId(5L).setSequenceNumber(55L);
 		createArray(sessionIdOne, replicaIdOne, arrOneId);
@@ -1145,7 +1120,7 @@ public class GridIndexDaoImplTest {
 						.setReferenceNodeId(ids.get(4)).setIsDeleted(false));
 
 		// call under test
-		gridIndexDao.insertIntoRepeatedGrowableArrayBatch(sessionIdOne, replicaIdOne, batch);
+		gridIndexDao.batchInsertRgaNodes(sessionIdOne, replicaIdOne, batch);
 
 		ArrayNode resultOne = gridIndexDao.getArrayNode(sessionIdOne, replicaIdOne, arrOneId, false, limit, offset);
 		assertEquals(new ArrayNode().setId(arrOneId).setElements(List.of(batch.get(0), batch.get(1))), resultOne);
@@ -1155,55 +1130,15 @@ public class GridIndexDaoImplTest {
 	}
 
 	@Test
-	public void testInsertIntoRepeatedGrowableArrayBatchWithNullBatch() {
+	public void testBatchInsertRgaNodesWithNullBatch() {
 		// call under test - should not throw
-		gridIndexDao.insertIntoRepeatedGrowableArrayBatch(sessionIdOne, replicaIdOne, null);
+		gridIndexDao.batchInsertRgaNodes(sessionIdOne, replicaIdOne, null);
 	}
 
 	@Test
-	public void testInsertIntoRepeatedGrowableArrayBatchWithEmptyBatch() {
+	public void testBatchInsertRgaNodesWithEmptyBatch() {
 		// call under test - should not throw
-		gridIndexDao.insertIntoRepeatedGrowableArrayBatch(sessionIdOne, replicaIdOne, Collections.emptyList());
-	}
-
-	@Test
-	public void testInsertIntoRepeatedGrowableArrayBatchWithNullNode() {
-		List<RGANode> batch = new ArrayList<>();
-		batch.add(null);
-
-		String message = assertThrows(IllegalArgumentException.class, () -> {
-			// call under test
-			gridIndexDao.insertIntoRepeatedGrowableArrayBatch(sessionIdOne, replicaIdOne, batch);
-		}).getMessage();
-		assertEquals("batch[0] is required.", message);
-	}
-
-	@Test
-	public void testInsertIntoRepeatedGrowableArrayBatchWithNullDataId() {
-		LogicalTimestamp arrOneId = new LogicalTimestamp().setReplicaId(4L).setSequenceNumber(44L);
-		List<RGANode> batch = List.of(
-				new RGANode().setContainerId(arrOneId).setNodeId(ids.get(0)).setDataId(null)
-						.setReferenceNodeId(arrOneId));
-
-		String message = assertThrows(IllegalArgumentException.class, () -> {
-			// call under test
-			gridIndexDao.insertIntoRepeatedGrowableArrayBatch(sessionIdOne, replicaIdOne, batch);
-		}).getMessage();
-		assertEquals("batch[0].dataId is required.", message);
-	}
-
-	@Test
-	public void testInsertIntoRepeatedGrowableArrayBatchWithNullReferenceNodeId() {
-		LogicalTimestamp arrOneId = new LogicalTimestamp().setReplicaId(4L).setSequenceNumber(44L);
-		List<RGANode> batch = List.of(
-				new RGANode().setContainerId(arrOneId).setNodeId(ids.get(0)).setDataId(ids.get(1))
-						.setReferenceNodeId(null));
-
-		String message = assertThrows(IllegalArgumentException.class, () -> {
-			// call under test
-			gridIndexDao.insertIntoRepeatedGrowableArrayBatch(sessionIdOne, replicaIdOne, batch);
-		}).getMessage();
-		assertEquals("batch[0].referenceNodeId is required.", message);
+		gridIndexDao.batchInsertRgaNodes(sessionIdOne, replicaIdOne, Collections.emptyList());
 	}
 
 	@Test
@@ -1217,13 +1152,16 @@ public class GridIndexDaoImplTest {
 		assertEquals(1L, gridIndexDao.getClockSequenceMaximum(sessionIdOne, replicaIdOne));
 		assertEquals(1L, gridIndexDao.getClockSequenceMaximum(sessionIdTwo, replicaIdTwo));
 		
-		gridIndexDao.setClock(sessionIdOne, replicaIdOne, new LogicalTimestamp().setReplicaId(1L).setSequenceNumber(2L));
-		gridIndexDao.setClock(sessionIdOne, replicaIdOne, new LogicalTimestamp().setReplicaId(3L).setSequenceNumber(4L));
-		gridIndexDao.setClock(sessionIdOne, replicaIdOne, new LogicalTimestamp().setReplicaId(5L).setSequenceNumber(6L));
-		
-		gridIndexDao.setClock(sessionIdTwo, replicaIdTwo, new LogicalTimestamp().setReplicaId(7L).setSequenceNumber(8L));
-		gridIndexDao.setClock(sessionIdTwo, replicaIdTwo, new LogicalTimestamp().setReplicaId(9L).setSequenceNumber(10L));
-		gridIndexDao.setClock(sessionIdTwo, replicaIdTwo, new LogicalTimestamp().setReplicaId(11L).setSequenceNumber(12L));
+		gridIndexDao.setClocks(sessionIdOne, replicaIdOne, List.of(
+				new LogicalTimestamp().setReplicaId(1L).setSequenceNumber(2L),
+				new LogicalTimestamp().setReplicaId(3L).setSequenceNumber(4L),
+				new LogicalTimestamp().setReplicaId(5L).setSequenceNumber(6L)
+		));
+		gridIndexDao.setClocks(sessionIdTwo, replicaIdTwo, List.of(
+				new LogicalTimestamp().setReplicaId(7L).setSequenceNumber(8L),
+				new LogicalTimestamp().setReplicaId(9L).setSequenceNumber(10L),
+				new LogicalTimestamp().setReplicaId(11L).setSequenceNumber(12L)
+		));
 		
 		// call under test
 		assertEquals(6L, gridIndexDao.getClockSequenceMaximum(sessionIdOne, replicaIdOne));
